--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 	</div>
 	<div class="fc-hero">
 		<h2>Give it a try</h2>
-		<p>After adding the above bookmarklet, Please try using it</p>
+		<p>After adding the above bookmarklet, Please try using it<br/>
+		You can clear the form by pushing the orange button at the bottom of the form</p>
 		<form class="fc-form">
 			<table class="fc-table">
 				<tr>
@@ -65,6 +66,8 @@
 					</td>
 				</tr>
 			</table>
+			<button class="fc-btn fc-btn-small fc-right" id="clear">Clear the form</button>
+			<br clear="right"/>
 		</form>
 	</div>
 </div>
@@ -74,6 +77,11 @@
 <script>
 $.get("https://raw.githubusercontent.com/steelydylan/FormCompleter/master/dest/FormCompleter.js",function(txt){
 	$("#formCompleter").attr("href",txt);
+});
+$("#clear").click(function(e){
+	e.preventDefault();
+	$("form").find("input,textarea").val("");
+	$("form").find("input[type=checkbox]").prop("checked",false);
 });
 </script>
 </body>
