--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</div>
 	<div class="fc-hero">
 		<h1>Do you always fill out forms with same contents?</h1>
-		<p>Add this bookmarklet to your bookmark bar by just dragging the button</p>
+		<p>Add this bookmarklet to your bookmark bar by just dragging the button to the best place</p>
 		<a href="" class="fc-btn" id="formCompleter">FormCompleter</a>
 	</div>
 	<div class="fc-hero">
