--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<tr>
 					<th></th>
 					<td>
-					<label><input type="checkbox" name="remember_me">Remember me</label>
+					<label><input type="checkbox" name="remember_me" value="remember">Remember me</label>
 					</td>
 				</tr>
 			</table>
