--- a/index.html
+++ b/index.html
@@ -11,7 +11,35 @@
 <a href="https://github.com/steelydylan/FormCompleter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 <div class="fc-container">
 	<div class="fc-logoWrap">
-		<img src="logo.png" height="176" width="141" alt="FormCompleter">
+		<svg width="141px" height="176px" viewBox="0 0 141 176" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+		    <!-- Generator: Sketch 3.3.3 (12072) - http://www.bohemiancoding.com/sketch -->
+		    <title>Rectangle 1 + Rectangle 2 + Rectangle 2 Copy + Rectangle 2 Copy 2 + Rectangle 2 + Rectangle 2 Copy + Rectangle 2 Copy 2 Copy</title>
+		    <desc>Created with Sketch.</desc>
+		    <defs></defs>
+		    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+		        <g id="Rectangle-1-+-Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-+-Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-Copy" sketch:type="MSLayerGroup">
+		            <rect id="Rectangle-1" fill="#E38D13" sketch:type="MSShapeGroup" x="0" y="0" width="141" height="176" rx="4"></rect>
+		            <g id="Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2" transform="translate(20.000000, 37.000000)" fill="#FFFFFF" sketch:type="MSShapeGroup">
+		                <rect x="0" y="0" width="101" height="7"></rect>		                
+		                <rect x="0" y="17" width="101" height="7"></rect>
+		                <rect x="0" y="34" width="101" height="7"></rect>
+		                
+		                <rect id="svg_text1" x="0" y="0" width="0" height="7" fill="#333333"></rect>
+		                <rect id="svg_text2" x="0" y="17" width="0" height="7" fill="#333333"></rect>
+		                <rect id="svg_text3" x="0" y="34" width="0" height="7" fill="#333333"></rect>
+		            </g>
+		            <g id="Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-Copy" transform="translate(20.000000, 88.000000)" fill="#FFFFFF" sketch:type="MSShapeGroup">
+		                <rect x="0" y="0" width="101" height="7"></rect>
+		                <rect x="0" y="17" width="101" height="7"></rect>
+		                <rect x="0" y="34" width="101" height="7"></rect>
+
+		                <rect id="svg_text4" x="0" y="0" width="101" height="7" fill="#333333"></rect>
+		                <rect id="svg_text5" x="0" y="17" width="101" height="7" fill="#333333"></rect>
+		                <rect id="svg_text6" x="0" y="34" width="101" height="7" fill="#333333"></rect>
+		            </g>
+		        </g>
+		    </g>
+		</svg>
 	</div>
 	<div class="fc-hero">
 		<h1>Do you always fill out forms with same contents?</h1>
