--- a/index.html
+++ b/index.html
@@ -1,117 +1,130 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>FormCompleter</title>
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="style.css">
-	<script src="jquery.js"></script>
-</head>
-<body>
-<a href="https://github.com/steelydylan/FormCompleter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
-<div class="fc-container">
-	<div class="fc-logoWrap">
-		<svg width="141px" height="176px" viewBox="0 0 141 176" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-		    <!-- Generator: Sketch 3.3.3 (12072) - http://www.bohemiancoding.com/sketch -->
-		    <title>Rectangle 1 + Rectangle 2 + Rectangle 2 Copy + Rectangle 2 Copy 2 + Rectangle 2 + Rectangle 2 Copy + Rectangle 2 Copy 2 Copy</title>
-		    <desc>Created with Sketch.</desc>
-		    <defs></defs>
-		    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-		        <g id="Rectangle-1-+-Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-+-Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-Copy" sketch:type="MSLayerGroup">
-		            <rect id="Rectangle-1" fill="#E38D13" sketch:type="MSShapeGroup" x="0" y="0" width="141" height="176" rx="4"></rect>
-		            <g id="Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2" transform="translate(20.000000, 37.000000)" fill="#FFFFFF" sketch:type="MSShapeGroup">
-		                <rect x="0" y="0" width="101" height="7"></rect>		                
-		                <rect x="0" y="17" width="101" height="7"></rect>
-		                <rect x="0" y="34" width="101" height="7"></rect>
-		                
-		                <rect id="svg_text1" x="0" y="0" width="0" height="7" fill="#333333"></rect>
-		                <rect id="svg_text2" x="0" y="17" width="0" height="7" fill="#333333"></rect>
-		                <rect id="svg_text3" x="0" y="34" width="0" height="7" fill="#333333"></rect>
-		            </g>
-		            <g id="Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-Copy" transform="translate(20.000000, 88.000000)" fill="#FFFFFF" sketch:type="MSShapeGroup">
-		                <rect x="0" y="0" width="101" height="7"></rect>
-		                <rect x="0" y="17" width="101" height="7"></rect>
-		                <rect x="0" y="34" width="101" height="7"></rect>
 
-		                <rect id="svg_text4" x="0" y="0" width="101" height="7" fill="#333333"></rect>
-		                <rect id="svg_text5" x="0" y="17" width="101" height="7" fill="#333333"></rect>
-		                <rect id="svg_text6" x="0" y="34" width="101" height="7" fill="#333333"></rect>
-		            </g>
-		        </g>
-		    </g>
-		</svg>
-	</div>
-	<div class="fc-hero">
-		<h1>Do you always fill out forms with same contents?</h1>
-		<p>Add this bookmarklet to your bookmark bar by just dragging the button to the best place</p>
-		<a href="" class="fc-btn" id="formCompleter">FormCompleter</a>
-	</div>
-	<div class="fc-hero">
-		<h2>How to use ?</h2>
-		<ol class="fc-list">
-		<li>Fill in the form as usual</li>
-		<li>Run the bookmarklet</li>
-		<li>Type the form's selector (exp. #form .form form) in the top input element</li>
-		<li>Push the "Get code" button</li>
-		<li>Push the "Save" button, and the form data will be saved in the localstrage</li>
-		<li>Visit the site again and push the load button</li>
-		<li>Push the "Auto fill" button</li>
-		<li>That's it. </li>
-		</ol>
-	</div>
-	<div class="fc-hero">
-		<h2>Features</h2>
-		<p>Since the data are saved in the each site's localstrage, There is no need to worry about the saved data</p>
-	</div>
-	<div class="fc-hero">
-		<h2>Give it a try</h2>
-		<p>After adding the above bookmarklet, Please try using it<br/>
-		You can clear the form by pushing the orange button at the bottom of the form</p>
-		<form class="fc-form">
-			<table class="fc-table">
-				<tr>
-					<th>First name</th>
-					<td>
-						<input type="text" placeholder="First name" name="firstname">
-					</td>
-				</tr>
-				<tr>
-					<th>Last name</th>
-					<td>
-						<input type="text" placeholder="Last name" name="lastname">
-					</td>
-				</tr>
-				<tr>
-					<th>Address</th>
-					<td>
-						<textarea placeholder="Adress" rows="3" name="address"></textarea>
-					</td>
-				</tr>
-				<tr>
-					<th></th>
-					<td>
-					<label><input type="checkbox" name="remember_me" value="remember">Remember me</label>
-					</td>
-				</tr>
-			</table>
-			<button class="fc-btn fc-btn-small fc-right" id="clear">Clear the form</button>
-			<br clear="right"/>
-		</form>
-	</div>
-</div>
-<footer class="fc-footer">
-	<p>Made with love by <a href="https://github.com/steelydylan/">@steelydylan</a></p>
-</footer>
-<script>
-$.get("https://raw.githubusercontent.com/steelydylan/FormCompleter/master/dest/FormCompleter.js",function(txt){
-	$("#formCompleter").attr("href",txt);
-});
-$("#clear").click(function(e){
-	e.preventDefault();
-	$("form").find("input,textarea").val("");
-	$("form").find("input[type=checkbox]").prop("checked",false);
-});
-</script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FormCompleter</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <a href="https://github.com/steelydylan/FormCompleter">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67"
+      alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
+  </a>
+  <div class="fc-container">
+    <div class="fc-logoWrap">
+      <svg width="141px" height="176px" viewBox="0 0 141 176" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+        <!-- Generator: Sketch 3.3.3 (12072) - http://www.bohemiancoding.com/sketch -->
+        <title>Rectangle 1 + Rectangle 2 + Rectangle 2 Copy + Rectangle 2 Copy 2 + Rectangle 2 + Rectangle 2 Copy + Rectangle 2
+          Copy 2 Copy</title>
+        <desc>Created with Sketch.</desc>
+        <defs></defs>
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+          <g id="Rectangle-1-+-Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-+-Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-Copy"
+            sketch:type="MSLayerGroup">
+            <rect id="Rectangle-1" fill="#E38D13" sketch:type="MSShapeGroup" x="0" y="0" width="141" height="176" rx="4"></rect>
+            <g id="Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2" transform="translate(20.000000, 37.000000)" fill="#FFFFFF" sketch:type="MSShapeGroup">
+              <rect x="0" y="0" width="101" height="7"></rect>
+              <rect x="0" y="17" width="101" height="7"></rect>
+              <rect x="0" y="34" width="101" height="7"></rect>
+
+              <rect id="svg_text1" x="0" y="0" width="0" height="7" fill="#333333"></rect>
+              <rect id="svg_text2" x="0" y="17" width="0" height="7" fill="#333333"></rect>
+              <rect id="svg_text3" x="0" y="34" width="0" height="7" fill="#333333"></rect>
+            </g>
+            <g id="Rectangle-2-+-Rectangle-2-Copy-+-Rectangle-2-Copy-2-Copy" transform="translate(20.000000, 88.000000)" fill="#FFFFFF"
+              sketch:type="MSShapeGroup">
+              <rect x="0" y="0" width="101" height="7"></rect>
+              <rect x="0" y="17" width="101" height="7"></rect>
+              <rect x="0" y="34" width="101" height="7"></rect>
+
+              <rect id="svg_text4" x="0" y="0" width="101" height="7" fill="#333333"></rect>
+              <rect id="svg_text5" x="0" y="17" width="101" height="7" fill="#333333"></rect>
+              <rect id="svg_text6" x="0" y="34" width="101" height="7" fill="#333333"></rect>
+            </g>
+          </g>
+        </g>
+      </svg>
+    </div>
+    <div class="fc-hero">
+      <h1>Do you always fill out forms with same contents?</h1>
+      <p>Add this bookmarklet to your bookmark bar by just dragging the button to the best place</p>
+      <a href="" class="fc-btn" id="formCompleter">FormCompleter</a>
+    </div>
+    <div class="fc-hero">
+      <h2>How to use ?</h2>
+      <ol class="fc-list">
+        <li>Fill in the form as usual</li>
+        <li>Run the bookmarklet</li>
+        <li>Type the form's selector (exp. #form .form form) in the top input element</li>
+        <li>Push the "Get code" button</li>
+        <li>Push the "Save" button, and the form data will be saved in the localstrage</li>
+        <li>Visit the site again and push the load button</li>
+        <li>Push the "Auto fill" button</li>
+        <li>That's it. </li>
+      </ol>
+    </div>
+    <div class="fc-hero">
+      <h2>Features</h2>
+      <p>Since the data are saved in the each site's localstrage, There is no need to worry about the saved data</p>
+    </div>
+    <div class="fc-hero">
+      <h2>Give it a try</h2>
+      <p>After adding the above bookmarklet, Please try using it
+        <br/> You can clear the form by pushing the orange button at the bottom of the form</p>
+      <form class="fc-form">
+        <table class="fc-table">
+          <tr>
+            <th>First name</th>
+            <td>
+              <input type="text" placeholder="First name" name="firstname">
+            </td>
+          </tr>
+          <tr>
+            <th>Last name</th>
+            <td>
+              <input type="text" placeholder="Last name" name="lastname">
+            </td>
+          </tr>
+          <tr>
+            <th>Address</th>
+            <td>
+              <textarea placeholder="Adress" rows="3" name="address"></textarea>
+            </td>
+          </tr>
+          <tr>
+            <th></th>
+            <td>
+              <label>
+                <input type="checkbox" name="remember_me" value="remember">Remember me</label>
+            </td>
+          </tr>
+        </table>
+        <button class="fc-btn fc-btn-small fc-right" id="clear">Clear the form</button>
+        <br clear="right" />
+      </form>
+    </div>
+  </div>
+  <footer class="fc-footer">
+    <p>Made with love by
+      <a href="https://github.com/steelydylan/">@steelydylan</a>
+    </p>
+  </footer>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script>
+    $.get("https://raw.githubusercontent.com/steelydylan/FormCompleter/master/dist/form-completer.js", function (txt) {
+      $("#formCompleter").attr("href", txt);
+    });
+    $("#clear").click(function (e) {
+      e.preventDefault();
+      $("form").find("input,textarea").val("");
+      $("form").find("input[type=checkbox]").prop("checked", false);
+    });
+  </script>
 </body>
+
 </html>
